--- a/archives/toutiao-search/2023-10-07.md
+++ b/archives/toutiao-search/2023-10-07.md
@@ -1,57 +1,78 @@
 # 2023-10-07
 
-共 313 条
+共 325 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 07 2023 22:00:44 GMT+0800 (China Standard Time) -->
-1. [哈马斯组织为何突袭以色列](https://so.toutiao.com/search?keyword=哈马斯组织为何突袭以色列)
+<!-- 最后更新时间 Sat Oct 07 2023 23:00:49 GMT+0800 (China Standard Time) -->
+1. [以色列总理：以色列正处于战争状态](https://so.toutiao.com/search?keyword=以色列总理：以色列正处于战争状态)
 1. [国内油价预计将迎来大幅下调](https://so.toutiao.com/search?keyword=国内油价预计将迎来大幅下调)
 1. [亚运会参赛代表团点赞中国之行](https://so.toutiao.com/search?keyword=亚运会参赛代表团点赞中国之行)
-1. [以色列总理：以色列正处于战争状态](https://so.toutiao.com/search?keyword=以色列总理：以色列正处于战争状态)
-1. [新郎看到新娘穿着校服瞬间泪奔](https://so.toutiao.com/search?keyword=新郎看到新娘穿着校服瞬间泪奔)
-1. [美国海军不认识解放军战斗机](https://so.toutiao.com/search?keyword=美国海军不认识解放军战斗机)
 1. [以色列军队宣布对加沙地带发动空袭](https://so.toutiao.com/search?keyword=以色列军队宣布对加沙地带发动空袭)
-1. [亚运九冠王！中国女排3-0日本成功卫冕](https://so.toutiao.com/search?keyword=亚运九冠王！中国女排3-0日本成功卫冕)
-1. [泰将赔偿枪案遇难者每人620万泰铢](https://so.toutiao.com/search?keyword=泰将赔偿枪案遇难者每人620万泰铢)
+1. [俄试射“末日武器”](https://so.toutiao.com/search?keyword=俄试射“末日武器”)
+1. [男子趁高速免费最后20秒卡点出站](https://so.toutiao.com/search?keyword=男子趁高速免费最后20秒卡点出站)
+1. [哈马斯组织为何突袭以色列](https://so.toutiao.com/search?keyword=哈马斯组织为何突袭以色列)
+1. [美国海军不认识解放军战斗机](https://so.toutiao.com/search?keyword=美国海军不认识解放军战斗机)
+1. [新郎看到新娘穿着校服瞬间泪奔](https://so.toutiao.com/search?keyword=新郎看到新娘穿着校服瞬间泪奔)
 1. [受伤时不能吃羊肉等“发物”？假的](https://so.toutiao.com/search?keyword=受伤时不能吃羊肉等“发物”？假的)
-1. [中国女游客在泰国五星级酒店坠亡](https://so.toutiao.com/search?keyword=中国女游客在泰国五星级酒店坠亡)
+1. [阿曼呼吁巴以双方保持最大限度克制](https://so.toutiao.com/search?keyword=阿曼呼吁巴以双方保持最大限度克制)
 1. [蔡徐坤说我也有自己的需求](https://so.toutiao.com/search?keyword=蔡徐坤说我也有自己的需求)
+1. [中国女游客在泰国五星级酒店坠亡](https://so.toutiao.com/search?keyword=中国女游客在泰国五星级酒店坠亡)
+1. [巴以冲突升级背后：圣地争议无解](https://so.toutiao.com/search?keyword=巴以冲突升级背后：圣地争议无解)
+1. [中秋国庆假期最挤城市排行榜](https://so.toutiao.com/search?keyword=中秋国庆假期最挤城市排行榜)
+1. [中国队突破200金创造亚运会历史](https://so.toutiao.com/search?keyword=中国队突破200金创造亚运会历史)
+1. [哈马斯公布抓获以色列人视频](https://so.toutiao.com/search?keyword=哈马斯公布抓获以色列人视频)
+1. [专家：春节、元宵等可增加假期](https://so.toutiao.com/search?keyword=专家：春节、元宵等可增加假期)
+1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
+1. [以巴爆发大规模冲突造成严重伤亡](https://so.toutiao.com/search?keyword=以巴爆发大规模冲突造成严重伤亡)
+1. [女童海中玩耍 好心人守护10分钟](https://so.toutiao.com/search?keyword=女童海中玩耍+好心人守护10分钟)
+1. [泰将赔偿枪案遇难者每人620万泰铢](https://so.toutiao.com/search?keyword=泰将赔偿枪案遇难者每人620万泰铢)
+1. [以总统：以色列正面临非常困难时刻](https://so.toutiao.com/search?keyword=以总统：以色列正面临非常困难时刻)
+1. [男子吃花蛤发现壳有字 拍摄者发声](https://so.toutiao.com/search?keyword=男子吃花蛤发现壳有字+拍摄者发声)
+1. [胡锡进：今年国庆档电影票房令人失望](https://so.toutiao.com/search?keyword=胡锡进：今年国庆档电影票房令人失望)
+1. [以色列少将被哈马斯武装人员俘虏](https://so.toutiao.com/search?keyword=以色列少将被哈马斯武装人员俘虏)
+1. [专家建议推行每周2.5天休息日](https://so.toutiao.com/search?keyword=专家建议推行每周2.5天休息日)
+1. [英国对加拿大和印度争端升级表态](https://so.toutiao.com/search?keyword=英国对加拿大和印度争端升级表态)
+1. [孙艺洲称疑遭新型蟹卡诈骗](https://so.toutiao.com/search?keyword=孙艺洲称疑遭新型蟹卡诈骗)
+1. [哈马斯仍在多个以色列社区进行枪战](https://so.toutiao.com/search?keyword=哈马斯仍在多个以色列社区进行枪战)
+1. [贝嫂首次回应20年前贝克汉姆出轨丑闻](https://so.toutiao.com/search?keyword=贝嫂首次回应20年前贝克汉姆出轨丑闻)
+1. [村书记工作群发“想小宝贝你”被查](https://so.toutiao.com/search?keyword=村书记工作群发“想小宝贝你”被查)
+1. [学生打数十个电话举报学校假期补课](https://so.toutiao.com/search?keyword=学生打数十个电话举报学校假期补课)
+1. [普布顿珠任四川省委常委](https://so.toutiao.com/search?keyword=普布顿珠任四川省委常委)
+1. [律师谈狗扑咬女子：若未拴绳主人担责](https://so.toutiao.com/search?keyword=律师谈狗扑咬女子：若未拴绳主人担责)
+1. [史玉柱等被强制执行17亿元](https://so.toutiao.com/search?keyword=史玉柱等被强制执行17亿元)
+1. [曝华为9月重回中国国产手机销量第1](https://so.toutiao.com/search?keyword=曝华为9月重回中国国产手机销量第1)
+1. [阿巴斯：巴勒斯坦人民有权捍卫自己](https://so.toutiao.com/search?keyword=阿巴斯：巴勒斯坦人民有权捍卫自己)
+1. [苹果回应黄色软件伪装成学习软件](https://so.toutiao.com/search?keyword=苹果回应黄色软件伪装成学习软件)
+1. [男子买车因拍视频遭工作人员驱赶](https://so.toutiao.com/search?keyword=男子买车因拍视频遭工作人员驱赶)
+1. [亚运霹雳舞技术官员忍不住技痒出手](https://so.toutiao.com/search?keyword=亚运霹雳舞技术官员忍不住技痒出手)
+1. [中国男篮颁奖仪式像犯错的孩子](https://so.toutiao.com/search?keyword=中国男篮颁奖仪式像犯错的孩子)
+1. [巴勒斯坦总统召开领导层紧急会议](https://so.toutiao.com/search?keyword=巴勒斯坦总统召开领导层紧急会议)
+1. [中国队突破200金](https://so.toutiao.com/search?keyword=中国队突破200金)
+1. [警方回应女子逗狗被扑咬：正在调查](https://so.toutiao.com/search?keyword=警方回应女子逗狗被扑咬：正在调查)
+1. [《坚如磐石》：中国人的饭局不简单](https://so.toutiao.com/search?keyword=《坚如磐石》：中国人的饭局不简单)
+1. [广东清远市委原书记郭锋被查](https://so.toutiao.com/search?keyword=广东清远市委原书记郭锋被查)
+1. [消息称38岁私募董事长系意外身亡](https://so.toutiao.com/search?keyword=消息称38岁私募董事长系意外身亡)
+1. [董卿缺席央视主持人大赛](https://so.toutiao.com/search?keyword=董卿缺席央视主持人大赛)
+1. [专家：调休需要更多策略和技巧](https://so.toutiao.com/search?keyword=专家：调休需要更多策略和技巧)
+1. [亚运九冠王！中国女排3-0日本成功卫冕](https://so.toutiao.com/search?keyword=亚运九冠王！中国女排3-0日本成功卫冕)
 1. [女子摸狗脸被撕咬坐地哀嚎](https://so.toutiao.com/search?keyword=女子摸狗脸被撕咬坐地哀嚎)
 1. [外媒：有以色列公民士兵被劫持俘虏](https://so.toutiao.com/search?keyword=外媒：有以色列公民士兵被劫持俘虏)
 1. [姚明谈男篮失利：可以接受辞职回家](https://so.toutiao.com/search?keyword=姚明谈男篮失利：可以接受辞职回家)
-1. [中秋国庆假期最挤城市排行榜](https://so.toutiao.com/search?keyword=中秋国庆假期最挤城市排行榜)
 1. [胡锡进谈美国参议员代表团访华](https://so.toutiao.com/search?keyword=胡锡进谈美国参议员代表团访华)
-1. [专家：春节、元宵等可增加假期](https://so.toutiao.com/search?keyword=专家：春节、元宵等可增加假期)
-1. [俄试射“末日武器”](https://so.toutiao.com/search?keyword=俄试射“末日武器”)
 1. [杜兆才系足坛反腐落马级别最高官员](https://so.toutiao.com/search?keyword=杜兆才系足坛反腐落马级别最高官员)
-1. [律师谈狗扑咬女子：若未拴绳主人担责](https://so.toutiao.com/search?keyword=律师谈狗扑咬女子：若未拴绳主人担责)
-1. [专家建议推行每周2.5天休息日](https://so.toutiao.com/search?keyword=专家建议推行每周2.5天休息日)
-1. [英国对加拿大和印度争端升级表态](https://so.toutiao.com/search?keyword=英国对加拿大和印度争端升级表态)
-1. [男子趁高速免费最后20秒卡点出站](https://so.toutiao.com/search?keyword=男子趁高速免费最后20秒卡点出站)
-1. [贝嫂首次回应20年前贝克汉姆出轨丑闻](https://so.toutiao.com/search?keyword=贝嫂首次回应20年前贝克汉姆出轨丑闻)
 1. [车辆冲断围栏碾压腾格里治沙植物](https://so.toutiao.com/search?keyword=车辆冲断围栏碾压腾格里治沙植物)
 1. [凡晨组合亚运羽毛球女双夺冠](https://so.toutiao.com/search?keyword=凡晨组合亚运羽毛球女双夺冠)
-1. [曝华为9月重回中国国产手机销量第1](https://so.toutiao.com/search?keyword=曝华为9月重回中国国产手机销量第1)
-1. [中国男篮颁奖仪式像犯错的孩子](https://so.toutiao.com/search?keyword=中国男篮颁奖仪式像犯错的孩子)
-1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
 1. [中国姐妹花获得亚运花游双人金牌](https://so.toutiao.com/search?keyword=中国姐妹花获得亚运花游双人金牌)
 1. [霍启刚八字点评中国香港代表团表现](https://so.toutiao.com/search?keyword=霍启刚八字点评中国香港代表团表现)
-1. [学生打数十个电话举报学校假期补课](https://so.toutiao.com/search?keyword=学生打数十个电话举报学校假期补课)
-1. [胡锡进：今年国庆档电影票房令人失望](https://so.toutiao.com/search?keyword=胡锡进：今年国庆档电影票房令人失望)
-1. [男子吃花蛤发现壳有字 拍摄者发声](https://so.toutiao.com/search?keyword=男子吃花蛤发现壳有字+拍摄者发声)
 1. [普京：俄军在战斗接触线上充满自信](https://so.toutiao.com/search?keyword=普京：俄军在战斗接触线上充满自信)
 1. [普京：俄罗斯不谋求他国领土](https://so.toutiao.com/search?keyword=普京：俄罗斯不谋求他国领土)
-1. [广东清远市委原书记郭锋被查](https://so.toutiao.com/search?keyword=广东清远市委原书记郭锋被查)
-1. [警方回应女子逗狗被扑咬：正在调查](https://so.toutiao.com/search?keyword=警方回应女子逗狗被扑咬：正在调查)
 1. [女孩国庆后返岗发现公司倒闭了](https://so.toutiao.com/search?keyword=女孩国庆后返岗发现公司倒闭了)
 1. [阿姨因家被盗每天带150万家当出门](https://so.toutiao.com/search?keyword=阿姨因家被盗每天带150万家当出门)
 1. [狗狗误食3斤泡酒的杨梅醉倒](https://so.toutiao.com/search?keyword=狗狗误食3斤泡酒的杨梅醉倒)
-1. [男子买车因拍视频遭工作人员驱赶](https://so.toutiao.com/search?keyword=男子买车因拍视频遭工作人员驱赶)
 1. [阿姨坐公交不慎遗落150余万家当](https://so.toutiao.com/search?keyword=阿姨坐公交不慎遗落150余万家当)
 1. [哈马斯借鉴俄乌冲突经验击毁以坦克](https://so.toutiao.com/search?keyword=哈马斯借鉴俄乌冲突经验击毁以坦克)
 1. [美方将42家中企列入出口管制清单](https://so.toutiao.com/search?keyword=美方将42家中企列入出口管制清单)
 1. [黄娟获激流回旋女子单人划艇金牌](https://so.toutiao.com/search?keyword=黄娟获激流回旋女子单人划艇金牌)
-1. [亚运霹雳舞技术官员忍不住技痒出手](https://so.toutiao.com/search?keyword=亚运霹雳舞技术官员忍不住技痒出手)
 1. [亚运冠军王楠低调回家](https://so.toutiao.com/search?keyword=亚运冠军王楠低调回家)
 1. [如何看待蔡徐坤疑回应私生活争议](https://so.toutiao.com/search?keyword=如何看待蔡徐坤疑回应私生活争议)
 1. [海滩女童走失：“野海滩”的另一面](https://so.toutiao.com/search?keyword=海滩女童走失：“野海滩”的另一面)
@@ -64,14 +85,11 @@
 1. [泰国警方回应中国女游客坠亡事件](https://so.toutiao.com/search?keyword=泰国警方回应中国女游客坠亡事件)
 1. [做过外卖员的他30岁破格进入国家队](https://so.toutiao.com/search?keyword=做过外卖员的他30岁破格进入国家队)
 1. [一场羽毛球比赛要用多少个球](https://so.toutiao.com/search?keyword=一场羽毛球比赛要用多少个球)
-1. [消息称38岁私募董事长系意外身亡](https://so.toutiao.com/search?keyword=消息称38岁私募董事长系意外身亡)
 1. [南京胖哥买东西被认出老板直接免单](https://so.toutiao.com/search?keyword=南京胖哥买东西被认出老板直接免单)
-1. [《坚如磐石》：中国人的饭局不简单](https://so.toutiao.com/search?keyword=《坚如磐石》：中国人的饭局不简单)
 1. [救护车工作人员遭殴打 警方介入](https://so.toutiao.com/search?keyword=救护车工作人员遭殴打+警方介入)
 1. [南京胖哥：会调整好心态](https://so.toutiao.com/search?keyword=南京胖哥：会调整好心态)
 1. [俄称退出条约不意味着会开展核试验](https://so.toutiao.com/search?keyword=俄称退出条约不意味着会开展核试验)
 1. [美专家：西方拱火使乌克兰危机升级](https://so.toutiao.com/search?keyword=美专家：西方拱火使乌克兰危机升级)
-1. [普布顿珠任四川省委常委](https://so.toutiao.com/search?keyword=普布顿珠任四川省委常委)
 1. [俄军战机挪威海上空拦截美国军机](https://so.toutiao.com/search?keyword=俄军战机挪威海上空拦截美国军机)
 1. [亚运会霹雳舞“高燃”座无虚席](https://so.toutiao.com/search?keyword=亚运会霹雳舞“高燃”座无虚席)
 1. [蔡徐坤工作室时隔三个月再营业](https://so.toutiao.com/search?keyword=蔡徐坤工作室时隔三个月再营业)
@@ -84,13 +102,11 @@
 1. [指挥中心大屏播放野外不雅画面监控](https://so.toutiao.com/search?keyword=指挥中心大屏播放野外不雅画面监控)
 1. [哈马斯与以色列国防军交手现场曝光](https://so.toutiao.com/search?keyword=哈马斯与以色列国防军交手现场曝光)
 1. [中国银行原董事长刘连舸被开除党籍](https://so.toutiao.com/search?keyword=中国银行原董事长刘连舸被开除党籍)
-1. [村书记工作群发“想小宝贝你”被查](https://so.toutiao.com/search?keyword=村书记工作群发“想小宝贝你”被查)
 1. [普京：俄已完成萨尔马特导弹研制](https://so.toutiao.com/search?keyword=普京：俄已完成萨尔马特导弹研制)
 1. [中国举重队摘5金 朝鲜成女队新标杆](https://so.toutiao.com/search?keyword=中国举重队摘5金+朝鲜成女队新标杆)
 1. [李诗沣羽毛球男单夺冠 石宇奇摘银](https://so.toutiao.com/search?keyword=李诗沣羽毛球男单夺冠+石宇奇摘银)
 1. [海南发布台风四级预警](https://so.toutiao.com/search?keyword=海南发布台风四级预警)
 1. [外媒关注舒默率美国两党参议员抵沪](https://so.toutiao.com/search?keyword=外媒关注舒默率美国两党参议员抵沪)
-1. [苹果回应黄色软件伪装成学习软件](https://so.toutiao.com/search?keyword=苹果回应黄色软件伪装成学习软件)
 1. [印度组合亚运羽毛球男双夺金](https://so.toutiao.com/search?keyword=印度组合亚运羽毛球男双夺金)
 1. [余承东：问界新M7大定已超50000台](https://so.toutiao.com/search?keyword=余承东：问界新M7大定已超50000台)
 1. [两位新人身着军装出席婚礼致敬宾客](https://so.toutiao.com/search?keyword=两位新人身着军装出席婚礼致敬宾客)
@@ -117,7 +133,6 @@
 1. [普京称俄罗斯“并未发动对乌战争”](https://so.toutiao.com/search?keyword=普京称俄罗斯“并未发动对乌战争”)
 1. [枪击事件或使泰国损失百万游客](https://so.toutiao.com/search?keyword=枪击事件或使泰国损失百万游客)
 1. [老君山1元午餐盘点多出1012元](https://so.toutiao.com/search?keyword=老君山1元午餐盘点多出1012元)
-1. [史玉柱等被强制执行17亿元](https://so.toutiao.com/search?keyword=史玉柱等被强制执行17亿元)
 1. [官方通报女子陪领导喝酒醉卧街头](https://so.toutiao.com/search?keyword=官方通报女子陪领导喝酒醉卧街头)
 1. [17名乌军自愿向俄军投降画面曝光](https://so.toutiao.com/search?keyword=17名乌军自愿向俄军投降画面曝光)
 1. [女干部退休前成立影子公司疯狂敛财](https://so.toutiao.com/search?keyword=女干部退休前成立影子公司疯狂敛财)
@@ -129,7 +144,6 @@
 1. [美智库：朝俄火车交通量急剧增加](https://so.toutiao.com/search?keyword=美智库：朝俄火车交通量急剧增加)
 1. [父母开车2000公里看望执勤中的女儿](https://so.toutiao.com/search?keyword=父母开车2000公里看望执勤中的女儿)
 1. [12306回应列车乘客有票上不了车](https://so.toutiao.com/search?keyword=12306回应列车乘客有票上不了车)
-1. [孙艺洲称疑遭新型蟹卡诈骗](https://so.toutiao.com/search?keyword=孙艺洲称疑遭新型蟹卡诈骗)
 1. [专家谈中东：恐怖主义并未偃旗息鼓](https://so.toutiao.com/search?keyword=专家谈中东：恐怖主义并未偃旗息鼓)
 1. [女子曝歌手罗中旭婚内出轨](https://so.toutiao.com/search?keyword=女子曝歌手罗中旭婚内出轨)
 1. [寒露该如何养生](https://so.toutiao.com/search?keyword=寒露该如何养生)
@@ -178,7 +192,6 @@
 1. [律师：传播干部不雅视频或触犯法律](https://so.toutiao.com/search?keyword=律师：传播干部不雅视频或触犯法律)
 1. [外媒：台积电市值蒸发770亿美元](https://so.toutiao.com/search?keyword=外媒：台积电市值蒸发770亿美元)
 1. [姚明：乔尔杰维奇合同年底到期](https://so.toutiao.com/search?keyword=姚明：乔尔杰维奇合同年底到期)
-1. [董卿缺席央视主持人大赛](https://so.toutiao.com/search?keyword=董卿缺席央视主持人大赛)
 1. [土军空袭叙利亚境内库尔德武装目标](https://so.toutiao.com/search?keyword=土军空袭叙利亚境内库尔德武装目标)
 1. [叙利亚军事学院遇袭已致112死240伤](https://so.toutiao.com/search?keyword=叙利亚军事学院遇袭已致112死240伤)
 1. [普京71岁生日](https://so.toutiao.com/search?keyword=普京71岁生日)
@@ -226,7 +239,6 @@
 1. [菲律宾队再谈击败中国男篮](https://so.toutiao.com/search?keyword=菲律宾队再谈击败中国男篮)
 1. [台风“小犬”逼近粤西琼东沿海](https://so.toutiao.com/search?keyword=台风“小犬”逼近粤西琼东沿海)
 1. [撒贝宁康辉担任央视主持人大赛嘉宾](https://so.toutiao.com/search?keyword=撒贝宁康辉担任央视主持人大赛嘉宾)
-1. [专家：调休需要更多策略和技巧](https://so.toutiao.com/search?keyword=专家：调休需要更多策略和技巧)
 1. [印度证实要求加方减少驻印外交人员](https://so.toutiao.com/search?keyword=印度证实要求加方减少驻印外交人员)
 1. [美媒：有共和党议员要“制造混乱”](https://so.toutiao.com/search?keyword=美媒：有共和党议员要“制造混乱”)
 1. [司机高速匝道停车致4车追尾](https://so.toutiao.com/search?keyword=司机高速匝道停车致4车追尾)
