--- a/archives/zhihu-search/2023-10-09.md
+++ b/archives/zhihu-search/2023-10-09.md
@@ -1,12 +1,13 @@
 # 2023-10-09
 
-共 10 条
+共 11 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Mon Oct 09 2023 00:00:48 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Oct 09 2023 01:00:55 GMT+0800 (China Standard Time) -->
 1. [以色列正式向哈马斯宣战](https://www.zhihu.com/search?q=以色列正式向哈马斯宣战)
 1. [原神新角色](https://www.zhihu.com/search?q=原神新角色)
 1. [Mate60Pro值得买吗](https://www.zhihu.com/search?q=Mate60Pro值得买吗)
+1. [无线耳机](https://www.zhihu.com/search?q=无线耳机)
 1. [蓝牙耳机](https://www.zhihu.com/search?q=蓝牙耳机)
 1. [国庆去哪玩](https://www.zhihu.com/search?q=国庆去哪玩)
 1. [lol所有人频道回归](https://www.zhihu.com/search?q=lol所有人频道回归)
